--- a/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.scss
+++ b/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.scss
@@ -1,7 +1,3 @@
-:host ::ng-deep .p-orderlist-controls {
-  display: none;
-}
-
 :host ::ng-deep {
   .p-chips {
     width: 100%;
@@ -10,3 +6,26 @@
     width: 100%;
   }
 }
+
+.subject-input {
+  flex-grow: 1; /* Allow the chips component to grow */
+}
+
+.subject-section {
+  width: 100%;
+}
+.subject-content {
+  width: 100%;
+  justify-content: flex-start;
+}
+:host ::ng-deep {
+    .hover-card .close-button {
+      display: none; /* Hide the button by default */
+    }
+  
+    .hover-card:hover .close-button {
+      display: block; /* Show the button when the card is hovered */
+    }
+  
+    /* Rest of your existing styles */
+  }
