--- a/libs/frontend/setup/feature-setup/src/lib/steps/school/school.component.scss
+++ b/libs/frontend/setup/feature-setup/src/lib/steps/school/school.component.scss
@@ -2,6 +2,10 @@
     width: 40rem;
 }
 
+:host ::ng-deep .p-orderlist-controls {
+    display: none;
+  }
+
 .content {
     display: flex;
     flex-direction: column;
