--- a/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.html
+++ b/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.html
@@ -8,12 +8,10 @@
         padding: 10px 10px;
       "
     >
-      <span style="font-weight: bold; font-size: 1.2em">Master 1</span>
+      <span style="font-weight: bold; font-size: 1.2em">{{yearName}}</span>
       <p-button
-        icon="pi pi-trash"
-        [rounded]="true"
+        icon="pi pi-times"
         [text]="true"
-        [raised]="true"
         severity="secondary"
         class="close-button"
       ></p-button>
