--- a/libs/frontend/setup/feature-setup/src/lib/steps/school/school.component.html
+++ b/libs/frontend/setup/feature-setup/src/lib/steps/school/school.component.html
@@ -17,11 +17,11 @@
         placeholder="exemple: 1ère année, ..., master 1, ect "
         (keydown.space)="$event.preventDefault()"
         [pKeyFilter]="blockSpace"
+        (keyup.enter)="addYear(yearInput.value); yearInput.value=''"
         #yearInput
       />
       <p-button
-        (keyup.enter)="addYear(yearInput.value)"
-        (click)="addYear(yearInput.value)"
+        (click)="addYear(yearInput.value); yearInput.value=''"
         icon="pi pi-plus"
         iconPos="right"
         severity="secondary"
@@ -32,12 +32,11 @@
     <div class="school-year-cards">
       <p-orderList
         [value]="years"
-        [listStyle]="{ height: '10rem' }"
         [dragdrop]="true"
         header="Les années scolaires"
       >
         <ng-template let-item pTemplate="item">
-          <campuscalendar-school-year-card></campuscalendar-school-year-card>
+          <campuscalendar-school-year-card [yearName]="item.name"></campuscalendar-school-year-card>
         </ng-template>
       </p-orderList>
     </div>
