--- a/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.html
+++ b/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.html
@@ -14,6 +14,7 @@
         [text]="true"
         severity="secondary"
         class="close-button"
+        (click)="removeYear()"
       ></p-button>
     </div>
   </ng-template>
