setup menu visual + validator done
responsive menu

--- a/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.html
+++ b/libs/frontend/setup/feature-setup/src/lib/school-year-card/school-year-card.component.html
@@ -24,9 +24,10 @@
     <p-chips
       [max]="30"
       class="subject-input"
-      [(ngModel)]="values"
+      [(ngModel)]="subjects"
       separator=","
       placeholder="maths, physique,..."
+      (onAdd)="addSubject()"
     ></p-chips>
   </div>
 </p-card>
