--- a/libs/frontend/setup/feature-setup/src/lib/steps/campus/campus.component.scss
+++ b/libs/frontend/setup/feature-setup/src/lib/steps/campus/campus.component.scss
@@ -2,8 +2,17 @@
     width: 40rem;
 }
 
-:host ::ng-deep .p-orderlist-controls {
-    display: none;
+.subject-input {
+    flex-grow: 1; 
+  }
+  
+  :host ::ng-deep {
+    .p-chips {
+      width: 100%;
+    }
+    .p-inputtext {
+      width: 100%;
+    }
   }
 
 .content {
@@ -12,35 +21,11 @@
     gap: 1rem;
 }
 
-#schoolName {
-    width: 100%;
-}
-
-#yearName {
-    width: 100%;
-}
-
-.school-section {
-
-    justify-content: center;
-}
-
-.school-year-cards {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
-    margin-top: 1rem;
-}
-
 .flex-grow-1 {
     flex-grow: 1;
 }
 
-.year-name-section {
-    justify-content: space-between;
 
-}
 
 // on mobile devices .content should be 100% width with margin 1rem
 // on desktop devices .content should be 40% width with margin 0
