--- a/libs/frontend/setup/feature-setup/src/lib/steps/personal-info/personal-info.component.html
+++ b/libs/frontend/setup/feature-setup/src/lib/steps/personal-info/personal-info.component.html
@@ -1,38 +1,101 @@
-<div class="content">
-  <h2>Configuration d'un compte administrateur</h2>
+<form [formGroup]="adminForm" (ngSubmit)="nextPage()">
+  <div class="content">
+    <h2>Configuration d'un compte administrateur</h2>
 
-  <div class="names-input">
-    <div class="flex-column small-gap">
-      <label for="firstName">Prénom</label>
-      <input pInputText id="firstName" placeholder="prénom" />
-    </div>
-
-    <div class="flex-column small-gap">
-      <label for="lastName">Nom de famille</label>
-      <input pInputText id="lastName" placeholder="nom de famille" />
-    </div>
-  </div>
-
-  <div class="flex-column small-gap">
-    <label for="email">Addresse email</label>
-    <input pInputText id="email" placeholder="email" />
-  </div>
-
-
-  <div class="names-input">
-    <div class="flex-column small-gap">
-      <label for="password">Mot de passe</label>
-      <input pInputText id="password" type="password" placeholder="mot de passe" />
-    </div>
-
-    <div class="flex-column small-gap">
-        <label for="password">Confirmation mot de passe</label>
-        <input pInputText id="password" type="password" placeholder="mot de passe" />
+    <div class="names-input">
+      <div class="flex-column small-gap flex-grow-1">
+        <label for="firstName">Prénom</label>
+        <input
+          formControlName="firstName"
+          pInputText
+          id="firstName"
+          placeholder="prénom"
+          appValidateField
+        />
+        <campuscalendar-validation-message
+          [formGroup]="adminForm"
+          controlName="firstName"
+          displayName="Le prénom"
+        ></campuscalendar-validation-message>
       </div>
-  </div>
 
-  
-  <div class="next-button">
-    <p-button label="suivant" icon="pi pi-angle-right" iconPos="right" (click)="nextPage()"></p-button>
+      <div class="flex-column small-gap flex-grow-1">
+        <label for="lastName">Nom de famille</label>
+        <input
+          pInputText
+          id="lastName"
+          placeholder="nom de famille"
+          formControlName="lastName"
+          appValidateField
+        />
+        <campuscalendar-validation-message
+          [formGroup]="adminForm"
+          controlName="lastName"
+          displayName="Le nom de famille"
+        ></campuscalendar-validation-message>
+      </div>
+    </div>
+
+    <div class="flex-column small-gap">
+      <label for="email">Addresse email</label>
+      <input
+        pInputText
+        id="email"
+        placeholder="email"
+        formControlName="email"
+        appValidateField
+      />
+      <campuscalendar-validation-message
+        [formGroup]="adminForm"
+        controlName="email"
+        displayName="Addresse email"
+      ></campuscalendar-validation-message>
+    </div>
+
+    <div class="names-input">
+      <div class="flex-column small-gap flex-grow-1">
+        <label for="password">Mot de passe</label>
+        <input
+          pInputText
+          id="password"
+          type="password"
+          placeholder="mot de passe"
+          formControlName="password"
+          appValidateField
+        />
+        <campuscalendar-validation-message
+          [formGroup]="adminForm"
+          controlName="password"
+          displayName="Le mot de passe"
+        ></campuscalendar-validation-message>
+      </div>
+
+      <div class="flex-column small-gap flex-grow-1">
+        <label for="password">Confirmation mot de passe</label>
+        <input
+          pInputText
+          id="confirmPassword"
+          type="password"
+          placeholder="mot de passe"
+          formControlName="confirmPassword"
+          appValidateField
+        />
+        <campuscalendar-validation-message
+          [formGroup]="adminForm"
+          controlName="confirmPassword"
+          displayName="Le mot de passe"
+        ></campuscalendar-validation-message>
+      </div>
+    </div>
+
+    <div class="next-button">
+      <p-button
+      [disabled]="!adminForm.valid"
+        label="suivant"
+        icon="pi pi-angle-right"
+        iconPos="right"
+        (click)="nextPage()"
+      ></p-button>
+    </div>
   </div>
-</div>
+</form>
