--- a/libs/frontend/setup/feature-setup/src/lib/steps/personal-info/personal-info.component.scss
+++ b/libs/frontend/setup/feature-setup/src/lib/steps/personal-info/personal-info.component.scss
@@ -1,19 +1,41 @@
 .names-input {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
 }
 
 .next-button {
-    margin-left: auto;
-    align-self: flex-end;
-    margin-top: 2rem;
-  }
-  
-  
+  margin-left: auto;
+  align-self: flex-end;
+  margin-top: 2rem;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+@media screen and (max-width: 768px) {
+    :host {
+        width: 100%;
+    }
+
+    .content {
+        margin: 1rem;
+    }
+
+    //clear names-input
+    .names-input {
+      flex-direction: column;
+      gap: 0;
+    }
+    
+}
+
