--- a/libs/frontend/authentification/feature-login/src/lib/login/login.component.scss
+++ b/libs/frontend/authentification/feature-login/src/lib/login/login.component.scss
@@ -58,7 +58,7 @@ input {
 h3 {
   font-weight: 300;
   margin-top: 3rem;
-  margin-bottom: 2rem;
+  margin-bottom: 0rem;
 }
 
 //.forgot-password top right of input password
@@ -73,6 +73,17 @@ h3 {
     font-size: small;
     font-weight: 300;
 
+}
+
+.space-desc {
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+
+small {
+  color: red;
 }
 
 @media only screen and (max-width: 900px) {
