--- a/libs/frontend/dashboard/feature-dashboard/src/lib/new-class-dialog/steps/offday-calendar/new-class-offday-step.component.scss
+++ b/libs/frontend/dashboard/feature-dashboard/src/lib/new-class-dialog/steps/offday-calendar/new-class-offday-step.component.scss
@@ -2,3 +2,10 @@
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+.next-button {
+    //place right
+    margin-top: 1rem;
+    margin-left: auto;
+  }
+  
