--- a/libs/frontend/dashboard/feature-dashboard/src/lib/new-class-dialog/new-class-dialog.component.html
+++ b/libs/frontend/dashboard/feature-dashboard/src/lib/new-class-dialog/new-class-dialog.component.html
@@ -16,13 +16,15 @@
     ></campuscalendar-new-class-sort-step>
 
     <campuscalendar-new-class-offday-step
-    *ngIf="state.currentStep === 2"
-  ></campuscalendar-new-class-offday-step>
+      *ngIf="state.currentStep === 2"
+    ></campuscalendar-new-class-offday-step>
 
     <campuscalendar-new-class-value-step
       *ngIf="state.currentStep === 3"
     ></campuscalendar-new-class-value-step>
 
-   
+    <campuscalendar-new-class-confirmation-step
+      *ngIf="state.currentStep === 4"
+    ></campuscalendar-new-class-confirmation-step>
   </div>
 </ng-container>
