--- a/libs/frontend/shared/school/src/lib/four-o-four/four-o-four.component.html
+++ b/libs/frontend/shared/school/src/lib/four-o-four/four-o-four.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="contant_box_404">
-          <h3 class="h2">Le calendrier ne semble plus disponible</h3>
+          <h3 class="h2">{{getMainMessage()}}</h3>
 
           <p class="h2">Revenez plus tard ou contacter votre école</p>
 
