--- a/libs/frontend/dashboard/feature-dashboard/src/lib/home/dashboard-home.component.html
+++ b/libs/frontend/dashboard/feature-dashboard/src/lib/home/dashboard-home.component.html
@@ -34,7 +34,7 @@
   </div>
 
   <p-button
-    label="Ajoutez une classe"
+    label="Ajouter une classe"
     icon="pi pi-plus"
     size="small"
     (click)="openNewClassDialog()"
@@ -69,7 +69,7 @@
         Aucune classe n'est disponible pour les filtres sélectionnés.
       </h3>
       <h3 *ngIf="!isFiltered()">
-        Aucune classe n'a été créée pour le moment. Cliquez sur Ajoutez une
+        Aucune classe n'a été créée pour le moment. Cliquez sur Ajouter une
         classe.
       </h3>
     </ng-template>
