--- a/libs/frontend/dashboard/feature-dashboard/src/lib/class-dialog/class-dialog.component.html
+++ b/libs/frontend/dashboard/feature-dashboard/src/lib/class-dialog/class-dialog.component.html
@@ -11,9 +11,7 @@
 
       <div class="card">
         <p-toolbar class="toolbar">
- 
-            <h3>{{classScheduler?.name}}</h3>
-
+          <h3>{{ classScheduler?.name }}</h3>
 
           <div class="flex-row">
             <div class="flex-row small-gap">
@@ -25,12 +23,13 @@
               <p-button
                 icon="pi pi-upload"
                 severity="help"
-                pTooltip="Exporter cette classe"
+                pTooltip="Exporter le calendrier de cette classe"
               ></p-button>
             </div>
             <p-divider [layout]="'vertical'"></p-divider>
 
             <p-button
+              (onClick)="deleteClass()"
               icon="pi pi-trash"
               severity="danger"
               pTooltip="Supprimer cette classe"
@@ -38,67 +37,76 @@
           </div>
         </p-toolbar>
 
-        <ng-container *ngIf="(sharedCalendar$ | async) as sharedCalendar">
-        <p-card>
-          <ng-template pTemplate="header">
-            <div class="header-container">
-              <div class="header-content">
-                <i class="pi pi-share-alt"></i>
-                <h3>Partager le calendrier en mode lecture</h3>
-              </div>
-              <div class="switch-container">
-                <p-inputSwitch [(ngModel)]="sharedCalendar.enabled" (onChange)="toggleShare()"></p-inputSwitch>
-              </div>
-            </div>
-          </ng-template>
+        <ng-container *ngIf="duplicateFormDisplayed">
+    
 
-          <div class="card-content">
-            <div class="flex-column link-content">
-              <p class="share-desc">
-                Lien du partage avec mode lecture uniquement
-              </p>
-              <div class="link-container flex-row small-gap">
-                <div class="link-copy-container">
-                  <p-button [disabled]="!sharedCalendar.enabled" [link]="true">{{
-                    sharedCalendar.link
-                  }}</p-button>
+        </ng-container>
 
+        <ng-container *ngIf="sharedCalendar$ | async as sharedCalendar">
+          <p-card>
+            <ng-template pTemplate="header">
+              <div class="header-container">
+                <div class="header-content">
+                  <i class="pi pi-share-alt"></i>
+                  <h3>Partager le calendrier en mode lecture</h3>
+                </div>
+                <div class="switch-container">
+                  <p-inputSwitch
+                    [(ngModel)]="sharedCalendar.enabled"
+                    (onChange)="toggleShare()"
+                  ></p-inputSwitch>
+                </div>
+              </div>
+            </ng-template>
+
+            <div class="card-content">
+              <div class="flex-column link-content">
+                <p class="share-desc">
+                  Lien du partage avec mode lecture uniquement
+                </p>
+                <div class="link-container flex-row small-gap">
+                  <div class="link-copy-container">
+                    <p-button
+                      [disabled]="!sharedCalendar.enabled"
+                      [link]="true"
+                      (onClick)="openUrl(sharedCalendar.link)"
+                      >{{ sharedCalendar.link }}</p-button
+                    >
+
+                    <p-button
+                      icon="pi pi-copy"
+                      (click)="copyLink()"
+                      severity="secondary"
+                      [disabled]="!sharedCalendar.enabled"
+                    >
+                    </p-button>
+                  </div>
                   <p-button
-                    icon="pi pi-copy"
-                    (click)="copyLink()"
+                    label="Nouveau lien"
+                    icon="pi pi-link"
+                    size="small"
                     severity="secondary"
                     [disabled]="!sharedCalendar.enabled"
-                  >
-                  </p-button>
+                    (onClick)="generateNewHash()"
+                  ></p-button>
                 </div>
-                <p-button
-                  label="Nouveau lien"
-                  icon="pi pi-link"
-                  size="small"
-                  severity="secondary"
-                  [disabled]="!sharedCalendar.enabled"
-                  (onClick)="generateNewHash()"
-                ></p-button>
               </div>
             </div>
-          </div>
-        </p-card>
-      </ng-container>
+          </p-card>
+        </ng-container>
       </div>
     </p-tabPanel>
 
-
-      <p-tabPanel>
-        <ng-template pTemplate="header">
-          <div class="flex-row small-gap">
-            <i class="pi pi-calendar"></i>
-            <span>Aperçu calendrier</span>
-          </div>
-        </ng-template>
-        <campuscalendar-calendar-feature
-          [calendar]="classScheduler?.calendar"
-        ></campuscalendar-calendar-feature>
-      </p-tabPanel>
- 
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <div class="flex-row small-gap">
+          <i class="pi pi-calendar"></i>
+          <span>Aperçu calendrier</span>
+        </div>
+      </ng-template>
+      <campuscalendar-calendar-feature
+        [calendar]="classScheduler?.calendar"
+      ></campuscalendar-calendar-feature>
+    </p-tabPanel>
   </p-tabView>
 </div>
